# world-cup-sim

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
data/raw/: odds_soccer_fifa_world_cup_winner_outrights_20250529T023450Z.parquet
notebooks/: profile.ipynb  profile_20250604T230752Z.prof
src/app/: app.py
src/core/: _cxx.py  cxx_sim.cpp  group_draw.py  group_stage.py  match_model.py  strength.py  tournament.py  vig.py
src/data/: fetch_odds.py  odds_api.py
tests/: test_cxx.py  test_match.py  test_strength.py  test_tournament.py  test_vig.py
