[project]
name            = "world_cup_sim"
version         = "0.0.1"
requires-python = ">=3.10"

[build-system]
requires = [
    "setuptools>=61",
    "scikit-build-core>=0.9",
    "pybind11>=2.12"       
]
build-backend = "scikit_build_core.build"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.scikit-build]
minimum-version = "0.9"
wheel.packages  = ["src"]           

[tool.scikit-build.cmake.define]
PYTHON_MODULE_PREFIX = ""           
CMAKE_CXX_STANDARD   = "17"
